Remove senceless usage of ionic-card

--- a/src/app/protected/cephalix/tickets/details/details.page.html
+++ b/src/app/protected/cephalix/tickets/details/details.page.html
@@ -1,4 +1,4 @@
-<cranix-toolbar></cranix-toolbar>
+<cranix-toolbar title="{{'Manage tickets' | translate}}"></cranix-toolbar>
 <ion-content *ngIf="ticket">
   <ion-card>
     <ion-card-header>
