--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -1,33 +1,33 @@
 <cranix-toolbar title="{{'Manage printers' | translate}}"></cranix-toolbar>
+<ion-toolbar *ngIf="!authService.isMD()">
+  <ion-item>
+    <ion-label *ngIf="gridApi">
+      #{{gridApi.getDisplayedRowCount()}}
+    </ion-label>
+    <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('printerFilter')"
+      id="printerFilter">
+    </ion-input>
+  </ion-item>
+  <ion-buttons slot="end">
+    <ion-button *ngIf="authService.isAllowed('printers.add')" size="small" fill="solid" (click)="addDevice($event)"
+      matTooltip="{{'Create a new printer device' | translate }}">
+      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="authService.isAllowed('printers.add')" size="small" fill="solid" (click)="addPrinter($event)"
+      matTooltip="{{'Create a new printer queue' | translate }}">
+      <ion-icon slot="icon-only" name="print"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="openActions($event,null)"
+      matTooltip="{{'Apply actions on the selected objects' | translate }}">
+      <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="openCollums($event)"
+      matTooltip="{{'Select the columns to show' | translate }}">
+      <ion-icon slot="icon-only" name="apps"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
-  <ion-toolbar>
-    <ion-item>
-      <ion-label *ngIf="gridApi">
-        #{{gridApi.getDisplayedRowCount()}}
-      </ion-label>
-      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('printerFilter')"
-        id="printerFilter">
-      </ion-input>
-    </ion-item>
-    <ion-buttons slot="end">
-      <ion-button *ngIf="authService.isAllowed('printers.add')" size="small" fill="solid" (click)="addDevice($event)"
-        matTooltip="{{'Create a new printer device' | translate }}">
-        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-      </ion-button>
-      <ion-button *ngIf="authService.isAllowed('printers.add')" size="small" fill="solid" (click)="addPrinter($event)"
-        matTooltip="{{'Create a new printer queue' | translate }}">
-        <ion-icon slot="icon-only" name="print"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-        matTooltip="{{'Apply actions on the selected objects' | translate }}">
-        <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="openCollums($event)"
-        matTooltip="{{'Select the columns to show' | translate }}">
-        <ion-icon slot="icon-only" name="apps"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
   <ag-grid-angular style="width: 100%; height:  100%;" class="{{authService.settings.agGridThema}}"
     rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
     [rowData]="objectService.allObjects['printer']" [columnDefs]="columnDefs"
