--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -1,30 +1,30 @@
 <cranix-toolbar title="{{'Manage hwconfs' | translate}}"></cranix-toolbar>
+<ion-toolbar *ngIf="!authService.isMD()">
+  <ion-item>
+    <ion-label *ngIf="gridApi">
+      #{{gridApi.getDisplayedRowCount()}}
+    </ion-label>
+    <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfsFilter')"
+      id="hwconfsFilter">
+    </ion-input>
+  </ion-item>
+  <ion-buttons slot="end">
+    <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+      matTooltip="{{'Create a new hardware configuration' | translate }}">
+      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="openActions($event,null)"
+      matTooltip="{{'Apply actions on the selected objects' | translate }}">
+      <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="openCollums($event)"
+      matTooltip="{{'Select the columns to show' | translate }}">
+      <ion-icon slot="icon-only" name="apps"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <ion-content *ngIf="!authService.isMD()">
-  <ion-toolbar>
-    <ion-item>
-      <ion-label *ngIf="gridApi">
-        #{{gridApi.getDisplayedRowCount()}}
-      </ion-label>
-      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfsFilter')"
-        id="hwconfsFilter">
-      </ion-input>
-    </ion-item>
-    <ion-buttons slot="end">
-      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
-        matTooltip="{{'Create a new hardware configuration' | translate }}">
-        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-        matTooltip="{{'Apply actions on the selected objects' | translate }}">
-        <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="openCollums($event)"
-        matTooltip="{{'Select the columns to show' | translate }}">
-        <ion-icon slot="icon-only" name="apps"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-  <ag-grid-angular *ngIf="!authService.isMD()" id="agGridTable" style="width: 100%; height: 100%;"
+  <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;"
     rowSelection="multiple" class="{{authService.settings.agGridThema}}"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
     rowHeight="{{authService.settings.rowHeight}}" [rowData]="objectService.allObjects['hwconf']"
