--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -1,28 +1,28 @@
 <cranix-toolbar title="{{'Manage rooms' | translate}}"></cranix-toolbar>
+<ion-toolbar *ngIf="!authService.isMD()">
+  <ion-item>
+    <ion-label *ngIf="gridApi">
+      #{{gridApi.getDisplayedRowCount()}}
+    </ion-label>
+    <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilter')" id="roomsFilter">
+    </ion-input>
+  </ion-item>
+  <ion-buttons slot="end">
+    <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+      matTooltip="{{'Create a new room' | translate }}">
+      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="openActions($event,null)"
+      matTooltip="{{'Apply actions on the selected objects' | translate }}">
+      <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="openCollums($event)"
+      matTooltip="{{'Select the columns to show' | translate }}">
+      <ion-icon slot="icon-only" name="apps"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
-  <ion-toolbar>
-    <ion-item>
-      <ion-label *ngIf="gridApi">
-        #{{gridApi.getDisplayedRowCount()}}
-      </ion-label>
-      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilter')" id="roomsFilter">
-      </ion-input>
-    </ion-item>
-    <ion-buttons slot="end">
-      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
-        matTooltip="{{'Create a new room' | translate }}">
-        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-        matTooltip="{{'Apply actions on the selected objects' | translate }}">
-        <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="openCollums($event)"
-        matTooltip="{{'Select the columns to show' | translate }}">
-        <ion-icon slot="icon-only" name="apps"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
   <ag-grid-angular id="roomsComponentTable" style="width: 100%; height: 100%;"
     class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
     [rowData]="objectService.allObjects['room']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
