--- a/src/app/protected/cranix/users/lists/users-import.component.html
+++ b/src/app/protected/cranix/users/lists/users-import.component.html
@@ -1,17 +1,17 @@
 <cranix-toolbar title="{{'Manage user imports' | translate}}"></cranix-toolbar>
+<ion-toolbar *ngIf="!authService.isMD()">
+  <ion-buttons slot="end">
+    <ion-button *ngIf="!runningImport" size="small" fill="solid" (click)="startImport()"
+      matTooltip="{{'Start a new user import' | translate }}">
+      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+    </ion-button>
+    <ion-button size="small" fill="solid" (click)="refreshImports()"
+      matTooltip="{{'Refresh the import list' | translate }}">
+      <ion-icon slot="icon-only" name="refresh"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <ion-content *ngIf="!authService.isMD()">
-  <ion-toolbar>
-    <ion-buttons slot="end">
-      <ion-button *ngIf="!runningImport" size="small" fill="solid" (click)="startImport()"
-        matTooltip="{{'Start a new user import' | translate }}">
-        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-      </ion-button>
-      <ion-button size="small" fill="solid" (click)="refreshImports()"
-        matTooltip="{{'Refresh the import list' | translate }}">
-        <ion-icon slot="icon-only" name="refresh"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
   <ion-grid>
     <ion-row style="background-color : {{authService.rowColors[2]}}">
       <ion-col size=2>{{'Start time' | translate}}</ion-col>
