--- a/src/app/protected/cranix/system/services/system-services.component.html
+++ b/src/app/protected/cranix/system/services/system-services.component.html
@@ -1,5 +1,5 @@
 <cranix-toolbar title="{{'Status of the Services' | translate}}"></cranix-toolbar>
-<ion-content id="carded">>
+<ion-content id="carded">
   <ion-row>
     <ion-col class="sub-header-row">
       <ion-label>{{ 'Name' | translate}}</ion-label>
