--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -1,6 +1,9 @@
 <cranix-toolbar title="{{'Manage tickets' | translate}}"></cranix-toolbar>
 <ion-toolbar *ngIf="!authService.isMD()">
   <ion-item>
+    <ion-label *ngIf="gridApi">
+      #{{gridApi.getDisplayedRowCount()}}
+    </ion-label>
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('ticketsFilter')"
       id="ticketsFilter">
     </ion-input>
