--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -100,7 +100,7 @@
         <ion-item-option (click)="openActions($event,object)">
           <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
         </ion-item-option>
-        <ion-item-option *ngIf="object.ipVPN && object.ipVN != ''" color="secondary" (click)="routeInstitute(object)">
+        <ion-item-option *ngIf="object.ipVPN && object.ipVPN != ''" color="secondary" (click)="routeInstitute(object)">
           <ion-icon slot="icon-only" name="create-outline" style="height:15px;width:15px"></ion-icon>
         </ion-item-option>
       </ion-item-options>
