--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -94,6 +94,14 @@
             <ion-label position="stacked">{{ key | translate }}</ion-label>
             <input [(ngModel)]="object[key]" name="{{key}}" type="date">
           </ion-item>
+          <ion-item *ngSwitchCase="'number'">
+            <ion-label position="stacked">{{ key | translate }}</ion-label>
+            <input [(ngModel)]="object[key]" name="{{key}}" type="number">
+          </ion-item>
+          <ion-item *ngSwitchCase="'numberRO'">
+            <ion-label position="stacked">{{ key | translate }}</ion-label>
+            <input [(ngModel)]="object[key]" name="{{key}}" type="number" readonly>
+          </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
