--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -26,7 +26,7 @@
   <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
     rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}"
     rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
-    [rowData]="objectService.allObjects['user']" [columnDefs]="columnDefs" [context]="context"
+    [rowData]="objectService.allObjects['user']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [context]="context"
     (gridReady)="onGridReady($event)" (selectionChanged)="selectionChanged()" id="agGridTable">
   </ag-grid-angular>
 </ion-content>
