#782 Benutzeransicht: Sortierung nach Quotagröße Add missed columnDefs in AgGrid and make all field sortable.

--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -42,6 +42,7 @@
         rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
         [rowData]="objectService.allObjects['user']"
         [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
         [context]="context"
         (gridReady)="onGridReady($event)"
         (selectionChanged)="selectionChanged()"
