--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -1,8 +1,8 @@
 <form #editForm="ngForm">
   <ion-header translucent>
     <ion-toolbar>
-      <ion-title *ngIf="!authService.isMD()">{{  objectActionTitle | translate }}</ion-title>
-      <ion-label *ngIf="authService.isMD()">{{  objectActionTitle | translate }}</ion-label>
+      <ion-title *ngIf="!authService.isMD()">{{ objectActionTitle | translate }}</ion-title>
+      <ion-label *ngIf="authService.isMD()">{{ objectActionTitle | translate }}</ion-label>
       <ion-buttons slot="end">
         <ion-button *ngIf="objectType == 'institute'" fill="clear" size="small" (click)="setNextDefaults()"
           matTooltip="{{'Set the next default values' | translate }}" [disabled]="disabled">
@@ -36,8 +36,17 @@
         </ion-item>
         <ion-item *ngSwitchCase="'number'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ion-input type="number" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}">
-          </ion-input>
+          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+            <ion-select type="number" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
+              [required]="objectService.required[key]" [disabled]="key == 'role' && fixedRole">
+              <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
+                {{option | translate}}</ion-select-option>
+            </ion-select>
+          </ng-template>
+          <ng-template #elseBlock>
+            <ion-input type="number" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}">
+            </ion-input>
+          </ng-template>
         </ion-item>
         <ion-item *ngSwitchCase="'numberRO'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
@@ -59,13 +68,8 @@
             *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
             {{ 'This field is required!' | translate }}</ion-label>
           <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
-            <ion-select 
-              type="text" 
-              [(ngModel)]="object[key]"
-              name="{{key}}"
-              [compareWith]="objectService.compareFn"
-              [required]="objectService.required[key]"
-              [disabled]="key == 'role' && fixedRole">
+            <ion-select type="text" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
+              [required]="objectService.required[key]" [disabled]="key == 'role' && fixedRole">
               <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
                 {{option | translate}}</ion-select-option>
             </ion-select>
@@ -108,7 +112,8 @@
             </ion-select>
           </ng-template>
           <ng-template #elseBlock>
-            <ion-input readonly type="text" [value]="objectService.idToName(key,object[key])" [required]="objectService.required[key]">
+            <ion-input readonly type="text" [value]="objectService.idToName(key,object[key])"
+              [required]="objectService.required[key]">
             </ion-input>
           </ng-template>
         </ion-item>
