Remove line from search field. Add line between search field and content. Fix some typos. Improve MD-view: System -> Services. Security -> all submenues.

--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -19,7 +19,7 @@
     </ion-fab-list>
   </ion-fab>
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-label *ngIf="gridApi">
         #{{gridApi.getDisplayedRowCount()}}
       </ion-label>
