--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -1,6 +1,6 @@
 <cranix-toolbar title="{{'Manage printers' | translate}}"></cranix-toolbar>
 <ion-toolbar *ngIf="!authService.isMD()">
-  <ion-item>
+  <ion-item lines="none">
     <ion-label *ngIf="gridApi">
       #{{gridApi.getDisplayedRowCount()}}
     </ion-label>
