--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -8,7 +8,7 @@
         </ion-card-title>
         <ion-row>
           <ion-col>
-            <ion-item>
+            <ion-item lines="none">
               <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')"
                 id="hwconfMembersFilter">
               </ion-input>
