--- a/src/app/protected/cranix/security/access-log/access-log.component.html
+++ b/src/app/protected/cranix/security/access-log/access-log.component.html
@@ -1,6 +1,6 @@
 <cranix-toolbar title="{{ 'Evaluate Internet Access Logs' | translate}}"></cranix-toolbar>
 <ion-content id="carded">
-  <ion-item>
+  <ion-item lines="none">
     <ion-label *ngIf="gridApi">
       #{{gridApi.getDisplayedRowCount()}}
     </ion-label>
