--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -1,7 +1,7 @@
 <cranix-toolbar *ngIf="!selectedStatus" title="{{'Status of the institutes' | translate}}"></cranix-toolbar>
 <ion-content *ngIf="!authService.isMD() && !selectedStatus" id="carded">
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
       </ion-input>
     </ion-item>
