--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -1,6 +1,6 @@
 <cranix-toolbar title="{{'Manage groups' | translate}}"></cranix-toolbar>
 <ion-toolbar *ngIf="!authService.isMD()">
-  <ion-item>
+  <ion-item lines="none">
     <ion-label *ngIf="gridApi">
       #{{gridApi.getDisplayedRowCount()}}
     </ion-label>
