--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -1,5 +1,5 @@
 <cranix-toolbar title="{{ 'Manage access in the rooms' | translate}}"></cranix-toolbar>
-<ion-toolbar>
+<ion-toolbar *ngIf="!authService.isMD()">
   <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="list">
     <ion-segment-button value="list">
       <ion-label>{{'Room access rules' | translate}}</ion-label>
@@ -8,12 +8,13 @@
       <ion-label>{{'Actual status' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <ion-item>
+  <ion-item-divider></ion-item-divider>
+  <ion-item lines="none">
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsAccessFilter')"
       id="roomsAccessFilter">
     </ion-input>
   </ion-item>
-  <ion-buttons *ngIf="!authService.isMD()" slot="end">
+  <ion-buttons slot="end">
     <ion-button *ngIf="segment == 'list'" size="small" fill="solid" (click)="redirectToAddEdit(null)"
       matTooltip="{{'Add new room access status' | translate }}" [disabled]="disabled">
       <ion-icon slot="icon-only" name="add-circle"></ion-icon>
@@ -22,8 +23,8 @@
       matTooltip="{{'Delete selected access rules' | translate }}" [disabled]="disabled">
       <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
     </ion-button>
-    <ion-button *ngIf="segment == 'status'" size="small" fill="solid"
-      (click)="securityService.getActualAccessStatus()" matTooltip="{{'Reload actual firewall status' | translate }}">
+    <ion-button *ngIf="segment == 'status'" size="small" fill="solid" (click)="securityService.getActualAccessStatus()"
+      matTooltip="{{'Reload actual firewall status' | translate }}">
       <ion-icon slot="icon-only" name="refresh" color="tertiary"></ion-icon>
     </ion-button>
     <ion-button size="small" (click)="restartFirewall()" size="small" fill="solid"
@@ -52,6 +53,14 @@
   </ag-grid-angular>
 </ion-content>
 <ion-content *ngIf="authService.isMD()">
+  <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="list">
+    <ion-segment-button value="list">
+      <ion-label>{{'Room access rules' | translate}}</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="status">
+      <ion-label>{{'Actual status' | translate}}</ion-label>
+    </ion-segment-button>
+  </ion-segment>
   <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
     <ion-fab-button size="small">
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -75,55 +84,55 @@
   </ion-fab>
   <ion-grid *ngIf="segment == 'list'">
     <ion-row style="background-color : {{authService.rowColors[2]}}">
-      <ion-col>
+      <ion-col size="4">
         {{ 'room' | translate}}
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         {{ 'pointInTime' | translate}}
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         {{ 'accessType' | translate}}
       </ion-col>
     </ion-row>
     <ion-row *ngFor="let obj of rowData; index as i" button (click)="redirectToAddEdit(obj)"
       style="background-color : {{authService.rowColors[i%2]}}">
-      <ion-col>
+      <ion-col size="4">
         {{ obj.roomId | idToName:'room' }}
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         {{ obj.pointInTime }}
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         {{ obj.accessType }}
       </ion-col>
     </ion-row>
   </ion-grid>
   <ion-grid *ngIf="segment == 'status'">
     <ion-row style="background-color : {{authService.rowColors[2]}}">
-      <ion-col>
+      <ion-col size="2">
         {{ 'room' | translate}}
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-button fill="clear" size="small" matTooltip="{{'login' | translate }}">
           <ion-icon name="log-in" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-button fill="clear" size="small" matTooltip="{{'portal' | translate }}">
           <ion-icon name="mail" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-button fill="clear" size="small" matTooltip="{{'printing' | translate }}">
           <ion-icon name="print" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col *ngIf="authService.isAllowed('system.proxy')">
+      <ion-col *ngIf="authService.isAllowed('system.proxy')" size="2">
         <ion-button fill="clear" size="small" matTooltip="{{'proxy' | translate }}">
           <ion-icon color="success" name="globe" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col *ngIf="authService.isAllowed('room.direct')">
+      <ion-col *ngIf="authService.isAllowed('room.direct')" size="2">
         <ion-button fill="clear" size="small" matTooltip="{{'direct' | translate }}">
           <ion-icon color="warning" name="globe" slot="icon-only"></ion-icon>
         </ion-button>
@@ -131,34 +140,34 @@
     </ion-row>
     <ion-row *ngFor="let obj of securityService.actualStatus; index as i"
       style="background-color : {{authService.rowColors[i%2]}}">
-      <ion-col>
+      <ion-col size="2">
         {{ obj.roomId | idToName:'room' }}
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-button fill="clear" size="small" [color]="obj.login ? 'success' : 'danger'"
           (click)="toggleButton(obj,'login')">
           <ion-icon [name]="obj.login ? 'checkmark-circle' : 'close-circle'" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-button fill="clear" size="small" [color]="obj.portal ? 'success' : 'danger'"
           (click)="toggleButton(obj,'portal')">
           <ion-icon [name]="obj.portal ? 'checkmark-circle' : 'close-circle'" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-button fill="clear" size="small" [color]="obj.printing ? 'success' : 'danger'"
           (click)="toggleButton(obj,'printing')">
           <ion-icon [name]="obj.printing ? 'checkmark-circle' : 'close-circle'" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col *ngIf="authService.isAllowed('system.proxy')">
+      <ion-col *ngIf="authService.isAllowed('system.proxy')" size="2">
         <ion-button fill="clear" size="small" [color]="obj.proxy ? 'success' : 'danger'"
           (click)="toggleButton(obj,'proxy')">
           <ion-icon [name]="obj.proxy ? 'checkmark-circle' : 'close-circle'" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col *ngIf="authService.isAllowed('room.direct')">
+      <ion-col *ngIf="authService.isAllowed('room.direct')" size="2">
         <ion-button fill="clear" size="small" [color]="obj.direct ? 'success' : 'danger'"
           (click)="toggleButton(obj,'direct')">
           <ion-icon [name]="obj.direct ? 'checkmark-circle' : 'close-circle'" slot="icon-only"></ion-icon>
