--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -19,7 +19,7 @@
   id="softwareFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
 <ion-content id="carded">
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-label *ngIf="gridApi">
         #{{gridApi.getDisplayedRowCount()}}
       </ion-label>
