--- a/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
+++ b/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
@@ -21,7 +21,7 @@
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
-          <ion-item>
+          <ion-item lines="none">
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('mypositivFilter')" id="mypositivFilter">
             </ion-input>
           </ion-item>
