--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -6,12 +6,15 @@
       </ion-input>
     </ion-item>
     <ion-buttons slot="end">
-      <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'Select the columns to show' | translate }}">
+      <ion-button size="small" fill="solid" (click)="cephalixService.reloadStatusOfInstitutes()" matTooltip="{{'Reload status of institutes' | translate }}">
+        <ion-icon slot="icon-only" name="reload"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openCollums($event)" matTooltip="{{'Select the columns to show' | translate }}">
         <ion-icon slot="icon-only" name="apps"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+  <ag-grid-angular id="agGridTable" style="width: 100%; height: 92%;" class="{{authService.settings.agGridThema}}"
     rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
     [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (firstDataRendered)="headerHeightSetter()"
@@ -24,8 +27,8 @@
       <ion-label>
         <h3>{{ object.cephalixInstituteId | idToName:'institute' }}</h3>
       </ion-label>
-      <ion-badge [color]="object.availableUpdates == '' ? 'success' : 'danger'">{{object.availableUpdates.split('
-        ').length -1}}</ion-badge>
+      <ion-badge [color]="object.availableUpdates == '' ? 'success' : 'danger'">
+        {{object.availableUpdates.split(' ').length -1}}</ion-badge>
       <ion-icon size="small" name="stats-chart" [color]="errorStatus(object)"></ion-icon>
       <ion-icon size="small" name="save" [color]="fsStatus(object)"></ion-icon>
       <ion-icon size="small" name="alarm" [color]="connectStatus(object)"></ion-icon>
@@ -59,34 +62,36 @@
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'rootUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.rootUsage) ? 'danger' : 'success'">{{
-          selectedStatus.rootUsage }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.rootUsage) ? 'danger' : 'success'">
+          {{ selectedStatus.rootUsage }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'homeUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.homeUsage) ? 'danger' : 'success'">{{
-          selectedStatus.homeUsage }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.homeUsage) ? 'danger' : 'success'">
+          {{ selectedStatus.homeUsage }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'varUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.varUsage) ? 'danger' : 'success'">{{ selectedStatus.varUsage
-          }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.varUsage) ? 'danger' : 'success'">
+          {{ selectedStatus.varUsage }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'srvUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.srvUsage) ? 'danger' : 'success'">{{ selectedStatus.srvUsage
-          }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.srvUsage) ? 'danger' : 'success'">
+          {{ selectedStatus.srvUsage }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'created' | translate }}</ion-label>
-        <ion-label [color]="connectStatus(selectedStatus)">{{ selectedStatus.created | date:'yyyy-MM-dd HH:mm:ss' }}
-        </ion-label>
+        <ion-label [color]="connectStatus(selectedStatus)">
+          {{ selectedStatus.created | date:'yyyy-MM-dd HH:mm:ss' }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'availableUpdates' | translate }}</ion-label>
         <ion-button *ngIf="selectedStatus.availableUpdates != ''" fill="clear"
           (click)="redirectToUpdate(selectedStatus.cephalixInstituteId)">
-          <ion-badge color="danger">{{selectedStatus.availableUpdates.split(' ').length -1 }}</ion-badge>
+          <ion-badge color="danger">
+            {{selectedStatus.availableUpdates.split(' ').length -1 }}
+          </ion-badge>
         </ion-button>
         <ion-label *ngIf="selectedStatus.availableUpdates == ''">
           {{ 'No updates' | translate }}
