--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -9,6 +9,10 @@
     </ion-input>
   </ion-item>
   <ion-buttons slot="end">
+    <ion-button fill="solid" (click)="objectService.getAllObject('ticket')"
+      matTooltip="{{'Reload tickets' | translate }}">
+      <ion-icon color="secondary" slot="icon-only" name="refresh"></ion-icon>
+    </ion-button>
     <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
       matTooltip="{{'Create a new ticket' | translate }}">
       <ion-icon slot="icon-only" name="add-circle"></ion-icon>
@@ -23,10 +27,10 @@
     </ion-button>
   </ion-buttons>
 </ion-toolbar>
-<ion-content *ngIf="!authService.isMD()" id="carded">
+<ion-content *ngIf="!authService.isMD() && objectService.allObjects['ticket']" id="carded">
   <ag-grid-angular style="width: 100%; height: 100%;" rowSelection="multiple"
     class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
-    [rowData]="objectService.allObjects['ticket']" [columnDefs]="columnDefs"
+    [rowData]="objectService.allObjects['ticket']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)"
     id="ticketsPageTable">
   </ag-grid-angular>
@@ -43,9 +47,6 @@
   <ion-list>
     <ion-item-sliding *ngFor="let object of objectService.allObjects['ticket']">
       <ion-item style="color: {{ticketColor[object.ticketStatus]}}" (click)="redirectToEdit(object)">
-        <!-- ion-note slot="start">
-          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
-        </ion-note -->
         <ion-label>
           <h2>{{ object.title }}</h2>
           {{ object.recDate | date:'yy-MM-dd HH:mm' }}
